--- a/css/styles.css
+++ b/css/styles.css
@@ -19,16 +19,52 @@
     src: url("../fonts/PTSansNarrow-Bold.woff2");
     font-display: swap;
 }
+ul, li {
+    margin: 0;
+    padding: 0;
+}
+html {
+    height: 100%;
+}
 body {
+    min-height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
     font-family: "PT Sans", sans-serif;
     font-size: 16px;
     line-height: 24px;
     color: #333;
     background-color: white;
   }
+.main-container {
+    flex-grow: 1;
+}
+.main-index {
+    background-image: url("../img/hero-bg.jpg");
+    background-color: black;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+}
+.page-container {
+    width: 940px;
+    margin: 0 auto;
+}
 .page-header {
     background-color: #000000;
     color: white;
+}
+
+/* Navigation */
+.navigation {
+    display: flex;
+    width: 940px;
+    margin:0 auto;
+}
+.navigation-list {
+    margin: 0;
+    padding: 0;
+    width: 440px;
 }
 .navigation-link {
     font-family: "PT Sans Narrow", sans-serif;
@@ -39,16 +75,31 @@ body {
     text-transform: uppercase;
     color: inherit;
 }
-.main-index {
-    background-image: url("../img/hero-bg.jpg");
-    background-color: black;
-    background-size: 100% auto;
-    background-repeat: no-repeat;
+.navigation-user {
+    width: 250px;
+    margin-left: auto;
 }
 
+
+/* Logo */
+.logo {
+    display: block;
+    margin: 0 auto;
+}
+.navigation-logo {
+    width: 140px;
+    margin-right: 100px;
+}
+
+/* Advantages */
 .advantages-list {
     text-align: center;
-
+    display: flex;
+    justify-content: space-between;
+    color: #FFFFFF;
+}
+.advantages-item {
+    width: 277px;
 }
 .advantages-title {
     font-family: "PT Sans Narrow", sans-serif;
@@ -59,12 +110,18 @@ body {
 }
 
 .column-group {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 40px;
     background-color: #FBF7F4;
     color: #242424;
     background-image: url("../img/bg-pattern-column.png");
 }
+
+/* Services */
 .services {
     text-transform: uppercase;
+    width: 390px;
 }
 .service-title {
     font-size: 32px;
@@ -80,13 +137,20 @@ body {
 .services-price {
     color: #AF7842;
 }
+
+/* Gallery */
 .gallery-title {
+    width: 390px;
     font-size: 32px;
     line-height: 35px;
     font-weight: 700;
     text-transform: uppercase;
 }
 
+/* Contacts */
+.contacts {
+    width: 350px;
+}
 .contacts-title {
     font-size: 32px;
     line-height: 35px;
@@ -110,6 +174,10 @@ body {
     color: #242424;
 }
 
+/* Appointment */
+.appointment {
+    width: 430px;
+}
 .appointment-title {
     font-size: 32px;
     line-height: 35px;
@@ -126,12 +194,25 @@ body {
 }
 
 /* Page Footer */
+.page-footer-container {
+    display: flex;
+    width: 940px;
+    margin: 0 auto;
+}
 .page-footer {
     font-size: 14px;
     font-weight: 700;
     color: #FFFFFF;
     background-color: #242424;
     background-image: url("../img/bg-pattern-column.png");
+}
+.footer-contacts {
+    width: 200px;
+    margin-right: 130px;
+}
+.footer-social {
+    margin-left: auto;
+    max-width: 190px;
 }
 .page-footer-title {
     text-transform: uppercase;
@@ -149,7 +230,20 @@ body {
     color: #595959;
 }
 
+/* Catalog */
+.catalog-products {
+    display: flex;
+}
+.catalog-right-column {
+    width: 700px;
+    display: flex;
+    flex-direction: column;
+}
 /* Catalog Filter */
+.catalog-filter {
+    width: 220px;
+    margin-right: 20px;
+}
 .catalog-filter-title {
     font-family: "PT Sans Narrow", sans-serif;
     font-weight: 700;
@@ -164,6 +258,9 @@ body {
 }
 
 /* Sorting */
+.sorting-container {
+
+}
 .select-control {
     font-weight: 700;
 }
@@ -189,4 +286,12 @@ body {
     background-color: #000000;
     text-decoration: none;
     text-transform: uppercase;
+}
+
+/* Pagination */
+.pagination {
+    display: flex;
+}
+.pagination-list {
+    display: flex;
 }
