--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,9 @@ body {
     right: auto;
     margin: auto 0;
 }
+.navigation-item {
+    position: relative;
+}
 .navigation-icon {
     position: absolute;
     top: 0;
@@ -234,7 +237,7 @@ body {
     text-transform: uppercase;
     width: 390px;
 }
-.service-title {
+.services-title {
     margin-top: 0;
     margin-bottom: 28px;
     font-size: 32px;
@@ -282,7 +285,68 @@ body {
     font-weight: 700;
     text-transform: uppercase;
 }
+.slider {
+    position: relative;
+}
+.slider-buttons {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: space-between;
+}
+.slider-button {
+    width: 48px;
+    height: 60px;
+    color: #FFFFFF;
+    background-color: #000000;
+    border: none;
+    cursor: pointer;
+    background-image: url("../img/arrow-left.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.slider-button:hover {
+    background-color: #814B18;
 
+}
+.slider-button:focus {
+    background-color: #4E2E0E;
+}
+.slider-next {
+    transform: rotate(180deg);
+}
+.slider-pagination {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.slider-pagination-item {
+    margin: 0 4px;
+}
+.slider-pagination-button {
+    width: 8px;
+    height: 8px;
+    margin: 0;
+    padding: 0;
+    background-color: #DBDBDB;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.slider-pagination-button:hover{
+    background-color: #AF7842;
+}
+.slider-pagination-button:focus {
+    background-color: #DBB590;
+}
+.slider-pagination-current {
+    background-color: #242424;
+}
 /* Contacts */
 .contacts {
     width: 350px;
@@ -344,7 +408,7 @@ body {
 .appointment-form {
     display: grid;
     grid-template-columns: 114px 74px 208px;
-    gap: 17px;
+    gap: 20px;
     color: #595959;
     margin-top: 24px;
 }
@@ -352,15 +416,58 @@ body {
     grid-column: 1 / -1;
 }
 .field-group {
+    margin: 0;
     display: flex;
     flex-direction: column;
-    margin: 0;
+}
+.form-label  {
+    margin-bottom: 8px;
+    font-weight: 700;
+    line-height: 24px;
+    text-transform: uppercase;
+}
+.form-label-icon {
+    position: relative;
+    padding-right: 16px;
+}
+.info {
+    position: absolute;
+    background-image: url("../img/info.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: transparent;
+    border: none;
+    margin: 4px 0 0 2px;
+    padding: 0;
+    width: 16px;
+    height: 16px;
+    content: '';
 }
 .field {
+    margin: 0;
     padding: 10px 16px;
-    width: 100%;
-    box-shadow: inset 0 0 0 2px #000000;
-    border: none;
+    border: 2px solid #242424;
+    font-family: inherit;
+    background-color: #FFFFFF;
+}
+.field:hover,
+.field:focus {
+    border-color: #AF7842;
+}
+.field:focus {
+    outline: 2px solid #DBB590;
+}
+.field:disabled,
+.field:disabled:hover {
+    color: #595959;
+    background-color: #DBB590;
+    border-color: #595959;
+}
+.field:invalid {
+    box-shadow: none;
+}
+.field:focus:invalid {
+    border-color: #EA5454; 
 }
 .form-label {
     line-height: 24px;
@@ -482,7 +589,7 @@ body {
     position: relative;
     margin-right: 32px;
 }
-.breadcrumbs-item::after {
+.breadcrumbs-item:not(:last-child)::after{
     position: absolute;
     content: '';
     height: 8px;
@@ -519,19 +626,144 @@ body {
     padding: 0;
     list-style: none;
 }
+.catalog-filter-group {
+    margin: 0;
+    margin-bottom: 40px;
+    padding: 0;
+    border: 0;    
+}
 .catalog-filter-title {
     font-family: "PT Sans Narrow", sans-serif;
     font-weight: 700;
     font-size: 20px;
     line-height: 28px;
     text-transform: uppercase;
+    margin-bottom: 22px;
 }
 .control {
+    position: relative;
+    display: block;
+    padding-left: 36px;
     font-weight: 700;
     color: #242424;
     line-height: 22px;
 }
+.control-mark {
+    position: absolute;
+    left: 0;
+    top: 2px;
+    width: 16px;
+    height: 16px;
+    border: 2px solid #242424;
+}
+.control-input[type="radio"] +
+.control-mark {
+    border-radius: 50%;
+}
+.control:hover .control-mark {
+    border-color: #814B18;
+}
+.control-input:disabled + .control-mark {
+    border-color: #242424;
+}
+.control-input[type="checkbox"]:checked  +
+.control-mark::before,
+.control-input[type="checkbox"]:checked  +
+.control-mark::after {
+    position: absolute;
+    top: 7px;
+    left: 2px;
+    width: 12px;
+    height: 2px;
+    background-color: #242424;
+    content: "";
+}
+.control-input[type="checkbox"]:checked  +
+.control-mark::before {
+    transform: rotate(45deg);
+}
+.control-input[type="checkbox"]:checked  +
+.control-mark::after {
+    transform: rotate(-45deg);
+}
+.control-input[type="radio"]:checked  +
+.control-mark::before 
+{
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    width: 8px;
+    height: 8px;
+    background-color: #242424;
+    border-radius: 50%;
+    content: "";
+}
 
+/* Price Scale */
+.range-scale {
+    position: relative;
+    width: 204px;
+    height: 4px;
+    background-color: #242424;
+    border-radius: 2px;
+    margin-bottom: 16px;
+}
+.range-bar {
+    position: absolute;
+    height: 4px;
+    background-color: #AF7842;
+}
+.range-toggle {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    background-color: #FFFFFF;
+    border: 2px solid #242424;
+    border-radius: 50%;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.range-toggle:hover {
+    background-color: #DBB590;
+}
+.range-toggle:active,
+.range-toggle:focus {
+    outline: 3px solid #DBB590;
+}
+.toggle-min {
+    top: -8px;
+    left: -10px;
+}
+.toggle-max {
+    top: -8px;
+    right: -10px;
+}
+
+.range-wrapper-inputs {
+    display: flex;
+    justify-content: center;
+}
+.catalog-filter-label {
+    display: flex;
+    margin-right: 5px;
+}
+.catalog-filter-item:not(:last-child) {
+    margin-bottom: 16px;
+}
+.range-input {
+    width: 30px;
+    padding: 0 2px;
+    font: inherit;
+    text-align: center;
+    background-color: transparent;
+    border: none;
+    appearance: textfield;
+}
+.range-input::-webkit-outer-spin-button,
+.range-input::-webkit-inner-spin-button{
+    appearance: none;
+    margin: 0;
+}
 /* Sorting */
 .sorting-container {
     display: flex;
@@ -544,12 +776,38 @@ body {
 .sorting-type {
     margin-right: auto;
 }
+.select {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 260px;
+    margin-right: auto;
+}
 .sorting-container .button {
     width: 56px;
     height: 44px;
 }
 .select-control {
+    width: 100%;
+    padding: 8px 14px;
     font-weight: 700;
+    font-family: inherit;
+    font-size: inherit;
+    height: 44px;
+    background-color: #FFFFFF;
+    border: 2px solid #242424;
+    background-image: url("../img/select-arrow.svg");
+    background-repeat: no-repeat;
+    background-position: right 16px center;
+    appearance: none;
+    cursor: pointer;
+}
+.select-control:hover,
+.select-control:focus {
+    border: 2px solid #AF7842;
+}
+.select-control:focus {
+    outline: 3px solid #DBB590;
 }
 .card-grid-toggle {
     display: flex;
@@ -622,16 +880,19 @@ body {
     font-weight: 700;
     text-align: center;
     color: #FFFFFF;
+    box-sizing: border-box;
     background-color: #000000;
     text-decoration: none;
     text-transform: uppercase;
     border: none;
     cursor: pointer;
 }
-.button:hover {
+.button:hover,
+.footer-social-link:hover {
     background-color: #814B18;
 }
-.button:focus {
+.button:focus,
+.footer-social-link:focus {
     background-color: #814B18;
     box-shadow: inset 0 0 0 2px #DBB590;
 }
@@ -732,3 +993,157 @@ body {
     color: #242424;
 }
 
+/* Popover - Cart */
+.popover {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    box-sizing: border-box;
+    padding: 40px;
+    font-family: "PT Sans Narrow", sans-serif;
+    min-height: 180px;
+    width: 300px;
+    background-color: #FFFFFF;
+    box-shadow: 0 18px 40px  rgba(79, 70, 60, 0.16);
+    display: none;
+}
+.popover-open {
+    display: block;
+}
+.popover-cart {
+    width: 420px;
+}
+.popover-cart .popover-close-button {
+    padding-left: 44px;
+    background-image: url("../img/cart.svg");
+    background-repeat: no-repeat;
+    background-position: 22px center;
+}
+.popover-close-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 72px;
+    height: 70px;
+}
+.popover-content {
+    height: 100%;
+}
+.popover-title {
+    margin-top: 0;
+    margin-bottom: 24px;
+    font-size: 32px;
+    line-height: 35px;
+    text-transform: uppercase;
+    color: #000000;
+}
+.cart-item {
+    display: grid;
+    grid-template-columns: 284px 56px;
+    color: #000000;
+}
+.cart-item-title {
+    margin-top: 0;
+    margin-bottom: 2px;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 700;
+    color: #242424;
+    text-transform: uppercase;
+}
+.cart-item-price {
+    margin: 0;
+    font-family: inherit;
+    color: #AF7842;
+}
+.cart-item svg{
+    fill: #FFFFFF;
+}
+.cart-item .button {
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
+}
+.cart-item + .cart-item {
+    margin-top: 24px;
+    padding-top: 24px;
+    border-top: 1px dashed #595959;
+}
+
+/* Modal Popup */
+.modal-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+.modal {
+    position: relative;
+    margin: auto;
+    padding: 40px;
+    background-color: #FFF;
+}
+.modal-auth {
+    width: 360px;
+}
+.modal-close-button {
+    position: absolute;
+    padding: 0;
+    top: 0;
+    right: 0;
+    width: 56px;
+    height: 44px;
+    background-color: #FFFFFF;
+    border: none;
+    background-image: url("../img/cross.svg");  
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;  
+}
+.modal-title {
+    margin: 0;
+    margin-bottom: 24px;
+    font-family: "PT Sans Narrow", sans-serif;
+    font-size: 32px;
+    line-height: 35px;
+    font-weight: 700;
+    color: #000000;
+    text-transform: uppercase;
+}
+.auth-form .field-group{
+    margin: 0;
+    margin-bottom: 16px;
+}
+.auth-form-user-options {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
+.auth-form-user-options .control-label {
+    font-weight: 400;
+}
+.auth-form .field {
+    width: 328px;
+}
+.auth-form-button {
+    width: 360px;
+    margin-bottom: 16px;
+}
+.auth-form .button + .button {
+    margin: 0;
+}
+.auth-form-recovery {
+    color: #000000;
+    line-height: 22px;
+}
+.auth-form-register {
+    width: 360px;
+    color: #000000;
+    background-color: #FFFFFF;
+}
+.modal-container-close {
+    display: none;
+}
